[workspace]
members = [
    "xtask",
    "ch8",
    "user",
    "linker",
    "console",
    "syscall",
    "kernel-context",
    "kernel-alloc",
    "kernel-vm",
    "task-manage",
    "easy-fs",
    "signal-defs",
    "signal",
    "signal-impl",
    "sync",
    
    "timer",
    "scheduler"
]
default-members = ["xtask"]
