[package]
name = "rcore-task-manage"
description = "Manages tasks and maintain relationships between them"
version = "0.0.0"
edition = "2021"
authors = ["zflcs <zhaofangliang@foxmail.com>"]
repository = "https://github.com/YdrMaster/rCore-Tutorial-in-single-workspace/task-manage"
documentation = "https://docs.rs/rcore-task-manage"
license = "WTFPL"
readme = "README.md"
keywords = ["rcore", "task-manage"]
categories = ["no-std"]

[dependencies]
rcore-scheduler = { path = "../scheduler" }
rcore-utils = { path = "../utils" }

[features]
proc = []
thread = []

seq = ["rcore-scheduler/seq"]
sjf = ["rcore-scheduler/sjf"]
stcf = ["rcore-scheduler/stcf"]
hrrn = ["rcore-scheduler/hrrn"]
stride = ["rcore-scheduler/stride"]
lottery = ["rcore-scheduler/lottery"]
edf = ["rcore-scheduler/edf"]
rms = ["rcore-scheduler/rms"]
mlfq = ["rcore-scheduler/mlfq"]